--- a/style/Vigilante-home.css
+++ b/style/Vigilante-home.css
@@ -34,6 +34,8 @@ img {
     transform: translate(-50%, -50%);
     z-index: 1;
     margin: 0;
+    width: 70%;
+    max-width: 500px;
 }
 
 .content {
